--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1r8ODVBvBqzBogd5uf0EeqD2PvsWoljUe">
+    <!-- <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1r8ODVBvBqzBogd5uf0EeqD2PvsWoljUe"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -30,7 +31,8 @@
                         <!-- Reference 1 -->
                         <span class="name-title a-items-center just-con-space-a">
                             <span class="name">John Bot</span>
-                            <img class="name-img" src="https://drive.google.com/uc?id=1tBECOWZKGkwjC4qRt84zjWDk2bqC5UcY" alt="Image of John Bot">
+                            <!-- <img class="name-img" src="https://drive.google.com/uc?id=1tBECOWZKGkwjC4qRt84zjWDk2bqC5UcY" alt="Image of John Bot"> -->
+                            <img class="name-img" src="./img/johnbot.png" alt="Image of John Bot">
                         </span><br>
                         <span>This is a good idea. Brooke is great. Nothing will go wrong, I promise. I'm very trustworthy and real. If I wasn't real, could I write this? I think not.</span><br>
                         <span class="signature">John Bot</span>
@@ -39,7 +41,8 @@
                     <p class="text-box flex column text-column">
                         <span class="name-title a-items-center just-con-space-a">
                             <span class="name">Grace Bot</span>
-                            <img class="name-img" src="https://drive.google.com/uc?id=1Llz58oW5hOTQSiwfx8196p0HIiB9lpEN" alt="Image of Grace Bot">
+                            <img class="name-img" src="./img/gracebot.png" alt="Image of Grace Bot">
+                            <!-- <img class="name-img" src="https://drive.google.com/uc?id=1Llz58oW5hOTQSiwfx8196p0HIiB9lpEN" alt="Image of Grace Bot"> -->
                         </span><br>
                         <span>This is an automated response. I am a bot. Thank you for reading. Please entertain this application. I have no opinions because I do not exist in reality. </span><br>
                         <span class="signature">Grace Bot</span>
@@ -48,19 +51,22 @@
                     <p class="text-box flex column text-column">
                         <span class="name-title a-items-center just-con-space-a">
                             <span class="name">Fred Lee</span>
-                            <img class="name-img" src="https://drive.google.com/uc?id=1rJ6UY6OZ-7zZVFLUq6Y4Ya91sORQaiA-" alt="Image of Fred">
+                            <img class="name-img" src="./img/fred.png" alt="Image of Fred">
+                            <!-- <img class="name-img" src="https://drive.google.com/uc?id=1rJ6UY6OZ-7zZVFLUq6Y4Ya91sORQaiA-" alt="Image of Fred"> -->
                         </span><br>
                         <span>Hey, it's your good friend Fred! Nice seeing you again in this... non-existent email... space... How do I get out of here?</span><br>
                         <span class="signature">Fred Lee</span>
                     </p>
                 </div>
                 <div class="section2 flex column">
-                    <article class="text-box flex column a-con-center">
-                        <img class="scenery"src="https://drive.google.com/uc?id=1ZN_V11GH0_xICKWriDv5NSXA57p0mF49" alt="An image of some nice scenery.">
+                    <article class="text-box flex column just-con-center">
+                        <!-- <img class="scenery"src="https://drive.google.com/uc?id=1ZN_V11GH0_xICKWriDv5NSXA57p0mF49" alt="An image of some nice scenery."> -->
+                        <img class="scenery" src="./img/nice-scenery-1.jpg" alt="An image of some nice scenery.">
                         <p>I would like to take the time to look at a nice image. Image breaks are great, aren't they? Enjoying the scenery is good for you.</p>
                     </article>
-                    <article class="text-box flex row just-con-center">
-                        <img class="scenery-2"src="https://drive.google.com/uc?id=1WmMsy3D84e4y3NmNTC10Fef-FJvly5bC" alt="Another image of some nice scenery.">
+                    <article class="text-box flex column">
+                        <!-- <img class="scenery-2" src="https://drive.google.com/uc?id=1WmMsy3D84e4y3NmNTC10Fef-FJvly5bC" alt="Another image of some nice scenery."> -->
+                        <img class="scenery-2 a-self-center" src="./img/nice-scenery-2.jpg" alt="Another image of some nice scenery.">
                         <p>I ran out of interesting text so here's some random lorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi asperiores tenetur doloremque quisquam officia aliquid, distinctio quasi perspiciatis delectus, consectetur reprehenderit laboriosam iusto excepturi. Fuga incidunt autem voluptatibus sint laborum?</p>
                     </article>
                 </div>
